Poprawa widoku opisu przepisow

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,7 +25,7 @@
 <div ng-show="{{ENV === 'dev'}}" class="development" ng-cloak=""></div>
 <div ui-view="navbar" ng-cloak=""></div>
 <div>
-    <div>
+    <div style="overflow: hidden;">
         <!--
                 <div class="col-lg-3 col-md-3 col-sm-4" ui-view="navbar-left" ng-cloak="" ng-show="isAuthenticated()"></div>
         -->
